aux_source_directory(. test_src)
add_executable(test_anagrams ${test_src})
target_link_libraries(test_anagrams anagrams)
target_link_libraries(test_anagrams GTest::gtest_main)
add_test(NAME test_anagrams COMMAND test_anagrams)
file(COPY words.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY empty.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY makeup.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY exceed.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
